correct typo in Menubar

--- a/default.html
+++ b/default.html
@@ -13,14 +13,14 @@
             <img src='assets/icons/rightmenu-button.png' class='right-menu-button'/>
             <div class='right-menu-dropmenu'>
                 <div><a href='about.html?lang=eng'>ABOUT</a></div>
-                <div><a href='resume.html?lang=eng'>RESUME</a></div>
+                <div><a href='resume.html?lang=eng'>RÉSUMÉ</a></div>
                 <div><a href='posts.html?lang=eng'>POSTS</a></div>
                 <div><a href='contact.html?lang=eng'>CONTACT</a></div>
                 <div><a class='lang-kor' style='cursor:pointer'>한국어</a></div>
             </div>
             <div class='right-menu-menu'>
                 <div><a href='about.html?lang=eng'>ABOUT</a></div>
-                <div><a href='resume.html?lang=eng'>RESUME</a></div>
+                <div><a href='resume.html?lang=eng'>RÉSUMÉ</a></div>
                 <div><a href='posts.html?lang=eng'>POSTS</a></div>
                 <div><a href='contact.html?lang=eng'>CONTACT</a></div>
                 <div><a class='lang-kor' style='cursor:pointer'>한국어</a></div>
