--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
             <a class='eng' href='/resume.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:rgb(180,180,230)'>
-                RÉSUMÉ</a>
+                RESUME</a>
             <a class='kor' href='/resume.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:rgb(180,180,230)'>
                 이력</a>
