--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,9 @@
 
     <!-- title -->
     <title>Jai Hyun Park</title>
+    <link rel='stylesheet' href='css/style.css'></link>
+    <link rel='shortcut icon' href='assets/icons/logo-fill.png' type='image/x-icon'></link>
+
 <style>
 .gform {
     position: relative;
@@ -283,6 +286,6 @@
     
     <!-- javascript -->
     <script src="js/jquery.js"></script>
-    <script src='js/manage-version.js'></script>
+    <script src='js/javascript.js'></script>
 
 </body>
