--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
     <!-- title -->
     <title>Jai Hyun Park</title>
-    
+    <link rel='stylesheet' href='css/style.css'></link>
+    <link rel='shortcut icon' href='assets/icons/logo-fill.png' type='image/x-icon'></link>
 </head>
 
 <body>
@@ -147,6 +148,6 @@
 
     <!-- javascript -->
     <script src="js/jquery.js"></script>
-    <script src='js/manage-version.js'></script>
+    <script src="js/javascript.js"></script>
 
 </body>
