--- a/resume.html
+++ b/resume.html
@@ -10,6 +10,9 @@
 
     <!-- title -->
     <title>Jai Hyun Park</title>
+    <link rel='stylesheet' href='css/style.css'></link>
+    <link rel='shortcut icon' href='assets/icons/logo-fill.png' type='image/x-icon'></link>
+
 <style>
 ._article-section hr{
     border:none;border-top:1px solid black;width:20%;opacity:0.5;margin:auto;
@@ -386,6 +389,6 @@
 
     <!-- javascript -->
     <script src="js/jquery.js"></script>
-    <script src='js/manage-version.js'></script>
+    <script src='js/javascript.js'></script>
 
 </body>
