--- a/contact.html
+++ b/contact.html
@@ -200,10 +200,10 @@
         <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
         <div class='_profile'>
-            <a class='eng' href='/contact.html' style='color:rgb(159,159,159)'>
+            <a class='eng' style='color:rgb(200,200,200)'>
                 CONTACT
             </a>
-            <a class='kor' href='/contact.html' style='color:rgb(159,159,159)'>
+            <a class='kor' style='color:rgb(200,200,200)'>
                 연락처
             </a>
             <p class='eng'>
