--- a/posts.html
+++ b/posts.html
@@ -25,10 +25,10 @@
         <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
         <div class='_profile'>
-            <a class='eng' href='/posts.html' style='color:rgb(200,255,200)'>
+            <a class='eng' style='color:rgb(200,255,200)'>
                 POSTS
             </a>
-            <a class='kor' href='/posts.html' style='color:rgb(200,255,200)'>
+            <a class='kor' style='color:rgb(200,255,200)'>
                 글들
             </a>
             <p class='eng'>
