--- a/resume.html
+++ b/resume.html
@@ -59,10 +59,10 @@
         <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
         <div class='_profile'>
-            <a class='eng' href='/resume.html' style='color:rgb(180,180,230)'>
+            <a class='eng' style='color:rgb(180,180,230)'>
                 RÉSUMÉ
             </a>
-            <a class='kor' href='/resume.html' style='color:rgb(180,180,230)'>
+            <a class='kor' style='color:rgb(180,180,230)'>
                 이력서
             </a>
             <p class='eng'>
