--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
 
         <section class='_track _content-section' id='passion' style='background-color:white;padding:80px 0px'>
             <div class='wider-piece flex-block'>
-                <img src='assets/imgs/SNU_etl-login.jpg' style='max-width:450px;width:70%;height:auto;margin:0;padding:0' />
+                <img src='assets/imgs/profile-picture.png' style='max-width:450px;width:70%;height:auto;margin:0;padding:0' />
                 
                 <div style='max-width:100px;width:70%;height:50px;margin:0'></div>
                 
@@ -466,8 +466,8 @@
 
                         <h2 class='kor'>뇌출혈 공연 - 드럼</h2>
                         <p class='kor'>수리과학부 밴드모임 뇌출혈 중 팀 '승보'에서 드럼으로 공연했다.</p>
-                        <h2 class='eng'>NCH Performance - Drum Player</h2>
-                        <p class='eng'>As a member of the team 'Seung-bo', played drum at the NCH regular performance. (NCH is the group of departmental bands)</p>
+                        <h2 class='eng'>'Natural' Performance - Drum Player</h2>
+                        <p class='eng'>As a member of the team 'Seung-bo', played drum at the 'Natural' regular performance. ('Natural' is the group of departmental bands)</p>
                     </div>
                     <div class='width100 timeline-year' id='2014'>
                         <h1>2014</h1>
@@ -480,8 +480,8 @@
 
                         <h2 class='kor'>뇌출혈 공연 - 드럼</h2>
                         <p class='kor'>수리과학부 밴드모임 뇌출혈 중 팀 '승보'와 팀 '포밴'에서 각각 드럼으로 공연했다.</p>
-                        <h2 class='eng'>NCH Performance - Drum Player</h2>
-                        <p class='eng'>As a member of the team 'Seung-bo' and the team 'Pho band', played drum at the NCH regular performance.</p>
+                        <h2 class='eng'>'Natural' Performance - Drum Player</h2>
+                        <p class='eng'>As a member of the team 'Seung-bo' and the team 'Pho band', played drum at the 'Natural' regular performance.</p>
                     </div>
                     <div class='width100 timeline-year' id='2015'>
                         <h1>2015</h1>
