--- a/tags.html
+++ b/tags.html
@@ -14,7 +14,10 @@
     <title>Jai Hyun Park</title>
     <link rel='stylesheet' href='css/style.css'></link>
     <link rel='shortcut icon' href='assets/icons/logo-fill.png' type='image/x-icon'></link>
-
+    <style>
+        #all-tags {background-color: rgba(24,24,32,0.9);margin-top:20px;padding:15px;border-radius:10px}
+        #all-tags li > a{font-family:"noto-eng-b","noto-kor-b";font-size:13pt;color:white}
+    </style>
 </head>
 
 <body>
@@ -26,23 +29,26 @@
         <div class='_overlay' style="background-color: rgba(24,24,30, 0.8)"></div>
 
         <div class='wide-piece post-info'>
-            <p class='post-title' style='color:rgb(200,255,200)'>
+            <p class='post-title eng' style='color:rgb(200,255,200)'>
                 TAGS
             </p>
+            <p class='post-title kor' style='color:rgb(200,255,200)'>
+                태그
+            </p>
 
-            <div style='background-color: rgba(24,24,32,0.9);margin-top:20px;padding:15px;border-radius:10px' id='all-tags'>
+            <div id='all-tags'>
                 <ul class='post-keywords'>
-                    <li class='post-keyword'><a href='tags.html#clustering' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
+                    <li class='post-keyword'><a href='tags.html#clustering'>
                         clustering</a></li>
-                    <li class='post-keyword'><a href='tags.html#cryptography' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
+                    <li class='post-keyword'><a href='tags.html#cryptography'>
                         cryptography</a></li>
-                    <li class='post-keyword'><a href='tags.html#HE' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
+                    <li class='post-keyword'><a href='tags.html#HE'>
                         HE</a></li>
-                    <li class='post-keyword'><a href='tags.html#homepage' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
+                    <li class='post-keyword'><a href='tags.html#homepage'>
                         homepage</a></li>
-                    <li class='post-keyword'><a href='tags.html#jquery' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
+                    <li class='post-keyword'><a href='tags.html#jquery'>
                         jquery</a></li>
-                    <li class='post-keyword'><a href='tags.html#programming' style='font-family:"noto-eng-b","noto-kor-b";font-size:13pt'>
+                    <li class='post-keyword'><a href='tags.html#programming'>
                         programming</a></li>
                 </ul>
             </div>
