--- a/posts.html
+++ b/posts.html
@@ -72,8 +72,8 @@
                 </ul>
                 <div><div class='first'>≪</div><div class='prev'>＜</div><div class='number'>1/</div><div class='next'>＞</div><div class='last'>≫</div></div>
             </div>
-            <p class='eng' style='margin-top:50px;font-family:"noto-eng","noto-kor";margin-bottom:0px;text-align:center'>See tags <a href='/tags.html'>HERE</a></p>
-            <p class='kor' style='margin-top:50px;font-family:"noto-eng","noto-kor";margin-bottom:0px;text-align:center'><a href='/tags.html'>태그</a>들을 모아서 보세요</p>
+            <p class='eng' style='margin-top:50px;font-family:"noto-eng","noto-kor";margin-bottom:0px;text-align:center'>See tags <a href='/tags.html?lang=eng'>HERE</a></p>
+            <p class='kor' style='margin-top:50px;font-family:"noto-eng","noto-kor";margin-bottom:0px;text-align:center'><a href='/tags.html?lang=kor'>태그</a>들을 모아서 보세요</p>
         </section>
     </div>
 
