fix-bug:mobile-resume

--- a/about.html
+++ b/about.html
@@ -50,8 +50,8 @@
 .timeline-year > h1 {display:block;font-family:'noto-eng','noto-kor';font-size:20pt;padding:0px 20px;border-bottom:1.5px solid black;height:40px;width:140px}
 .timeline-right h1 {padding-right:40px}
 .timeline-left h1 {padding-left:40px}
-.timeline-year > h2 {font-family:'noto-eng','noto-kor';font-size:12pt;padding:5px 0px;padding-top:25px;width:60%}
-.timeline-year > p  {font-family:'noto-eng','noto-kor';font-size:10pt;padding:10px 10px;margin:0px;width:60%}
+.timeline-year > h2 {font-family:'noto-eng','noto-kor';font-size:12pt;padding:5px 0px;padding-top:25px;width:80%;max-width:450px;}
+.timeline-year > p  {font-family:'noto-eng','noto-kor';font-size:10pt;padding:10px 10px;margin:0px;width:80%;max-width:450px;}
 .timeline-right p, .timeline-right h2 {margin-right:40px; margin-left:auto}
 .timeline-right h1 {margin-right:0px; margin-left:auto}
 .timeline-left p, .timeline-left h2 {margin-left:40px; margin-right:auto}
@@ -183,11 +183,9 @@
                         lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol 
                         lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol 
                         lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol 
-                        lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol 
-                        lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol lol 
                     </p>
                     <p class='kor' style='text-align:left'>
-                        ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎ                        ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎ                        ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎ                        ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎ                        ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎ                        ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎ
+                        ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎ                        ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎ                        ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎ                        ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎ
                     </p>
                 </div>
             </div>
