About page & Main page

--- a/index.html
+++ b/index.html
@@ -16,15 +16,64 @@
 </head>
 
 <body>
-    <div class='load-menubar' style='position:fixed;width:100%;z-index:1'></div>
+    <div class='load-menubar'></div>
+    <!--  style='position:fixed;width:100%;z-index:1' -->
 
     <!-- header -->
-    <header class="_track tall-header fixed" id='header'>
+    <header class="_track" id='header' style='padding-bottom:70px'>
         <div class='_overlay' style="background-color: rgb(58,58,70)"></div>
 
-        <div class='_profile'>
+        <style>
+            .main-profile{z-index:20;margin-top:250px;position:relative;margin-bottom:40px}
+            .main-profile *{position:relative!important}
+            .main-profile > img {max-width:400px;width:70%;position:relative;margin-left:120px;margin-right:auto}
+            .main-profile > div {max-width:600px;width:80%;position:relative;margin-bottom:0;margin-top:auto;margin-right:120px;margin-left:auto}
+            .main-profile h1 {font-family:'noto-eng-b','noto-kor-b';font-size:30pt;color:#ffffea}
+            .main-profile h2 {font-family:'noto-eng-ii','noto-kor-ii';font-size:11pt;color:#bababa}
+            .main-profile p {font-family:'noto-eng','noto-kor';font-size:13pt;color:#ffffea;text-align:left;margin-top:20px}
+            .main-profile ul {margin-top:20px;display:flex;}
+            .main-profile li {text-align:left;display:flex;margin-right:20px}
+            .main-profile li a {display:flex}
+            .main-profile li img {width:22px;height:24px}
+            .main-profile li p {display:inline;margin:auto 5px;font-family:'noto-eng','noto-kor';font-size:9.5pt;text-align:left;color:#ffffea;}
+            @media screen and (max-width: 1000px) {
+                .main-profile{margin-top:150px}
+                .main-profile > div {margin-top: 40px}
+                .main-profile h1{text-align:center!important}
+                .main-profile h2{text-align:center!important}
+                .main-profile p{text-align:left!important}
+            }
+        </style>
+        <div class='flex-block main-profile'>
+            <img src='assets/imgs/profile-picture.png'>
+            <div>
+                <h1 class='kor'>박 재 현</h1>
+                <h1 class='eng'>Jai Hyun Park</h1>
+                <h2 class='kor'>석박통합과정ㆍ서울대학교 수리과학부</h2>
+                <h2 class='eng'>Integrated PhD StduentㆍDepartment of Mathematical Sciences, Seoul National University</h2>
+                <p class='kor'>생각하고 표현하길 좋아하는 대학원생입니다. 암호로 수학을 활용하는 걸 좋아합니다. 피아노와 드럼을 치며, 영화와 글짓기에도 관심이 많습니다.</p>
+                <p class='eng'>I am a graduate student who likes to think and express. I like the way cryptography utilizes math. I play the piano and drum, and I am also interested in movies and writing.
+                </p>
+                <ul>
+                    <li>
+                        <a href='mailto:jhyunp@snu.ac.kr'>
+                            <img src='assets/icons/logo-mail.png' />
+                            <p>jhyunp@snu.ac.kr</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href='https://jaihyunp.github.io'>
+                            <img src='assets/icons/logo-page.png' />
+                            <p>https://jaihyunp.github.io</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- <div class='_profile'>
             <a style='font-size:25pt'>
-                <img src='assets/imgs/profile-picture.png' style='width:160px;position:relative;margin:auto'>
+                <img src='assets/imgs/profile-picture.png' style='width:260px;position:relative;margin:auto'>
                 <p class='eng'>Jai Hyun Park</p>
                 <p class='kor'>박 재 현</p>
             </a>
@@ -34,11 +83,11 @@
             <p class='kor'>
                 <b style='font-size:20pt'>작업 중</b>
             </p>
-        </div>
+        </div> -->
 
     </header>
 
-    <section id='empty-header' class='_track tall-header'></section>
+    <!-- <section id='empty-header' class='_track tall-header'></section> -->
     <div class="_see-more" style='background-color:rgb(24,24,32);'>
         <div class='eng'>
             See my contents
@@ -55,7 +104,7 @@
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180629_143535-min.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
-            <a class='eng' href='/about.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <a class='eng' href='/about.html?lang=eng' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:rgb(255,255,164)'>
                 ABOUT</a>
             <a class='kor' href='/about.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
@@ -65,7 +114,7 @@
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20190814-sac2019.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
-            <a class='eng' href='/resume.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <a class='eng' href='/resume.html?lang=eng' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:rgb(180,180,230)'>
                 RESUME</a>
             <a class='kor' href='/resume.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
@@ -75,7 +124,7 @@
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180922_183635-min.jpg' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
-            <a class='eng' href='/posts.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <a class='eng' href='/posts.html?lang=eng' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:rgb(200,255,200)'>
                 POSTS</a>
             <a class='kor' href='/posts.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
@@ -85,7 +134,7 @@
         <section style='height:120px;width:100%;position:relative;overflow:hidden'>
             <img src='assets/imgs/20180519-hello-min.JPG' style='width:100%;height:auto;z-index:5;position:absolute;object-fit:cover' />
             <div class='_overlay' style='background-color:rgba(24,24,32,0.8)'></div>
-            <a class='eng' href='/contact.html' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
+            <a class='eng' href='/contact.html?lang=eng' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
                 color:rgb(200,200,200)'>
                 CONTACT</a>
             <a class='kor' href='/contact.html?lang=kor' style='font-family:"noto-eng-b","noto-kor-b";font-size:35pt;position:absolute;top:50%;z-index:15;text-decoration:none;right:50%;transform:translate(50%,-50%);
